exports[`SingleSelect [common] example testing should match snapshot(s) for 01.basic 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 02.named-options 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}
    name="red">
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}
    name="green">
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}
    name="blue">
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 03.disabled-options 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={false}>
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={false}>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 04.disabled-select 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={true}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-disabled"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 05.grouped-options 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.OptionGroup
    isHidden={false}>
    Screen
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Red
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Green
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}>
    Print
    <SingleSelect.Option>
      Cyan
    </SingleSelect.Option>
    <SingleSelect.Option>
      Yellow
    </SingleSelect.Option>
    <SingleSelect.Option>
      Magenta
    </SingleSelect.Option>
    <SingleSelect.Option>
      Black
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Cyan
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Yellow
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Magenta
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Black
    </DropMenu.Option>
  </DropMenu.OptionGroup>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 06.no-unselect 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Foo
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 07.max-menu-height 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "12em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Aliceblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Antiquewhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Aqua
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Aquamarine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Azure
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Beige
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Bisque
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Black
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Blanchedalmond
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Blue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Blueviolet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Brown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Burlywood
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Cadetblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Chartreuse
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Chocolate
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Coral
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Cornflowerblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Cornsilk
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Crimson
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Cyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkcyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkgoldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkkhaki
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkmagenta
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkolivegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkorange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkorchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darksalmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkslateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkslategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Darkviolet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Deeppink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Deepskyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Dimgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Dodgerblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Firebrick
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Floralwhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Forestgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Fuchsia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Gainsboro
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Ghostwhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Gold
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Goldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Gray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Greenyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Honeydew
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Hotpink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Indianred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Indigo
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Ivory
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Khaki
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lavender
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lavenderblush
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lawngreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lemonchiffon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightcoral
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightcyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightgoldenrodyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightpink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightsalmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightskyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightslategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightsteelblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lightyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Lime
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Limegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Linen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Magenta
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Maroon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Medium aquamarine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumorchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumpurple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumslateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumspringgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mediumvioletred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Midnightblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mintcream
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Mistyrose
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Moccasin
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Navajowhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Navy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Oldlace
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Olive
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Olivedrab
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Orangered
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Orchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Palegoldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Palegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Paleturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Palevioletred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Papayawhip
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Peachpuff
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Peru
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Pink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Plum
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Powderblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Purple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Rebeccapurple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Rosybrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Royalblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Saddlebrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Salmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Sandybrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Seagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Seashell
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Sienna
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Silver
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Skyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Slateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Slategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Snow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Springgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Steelblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Tan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Teal
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Thistle
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Tomato
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Turquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Violet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Wheat
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    White
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Whitesmoke
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Yellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Yellowgreen
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 08.rich-content 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        <PlusIcon
          isBadge={true}
          style={
            Object {
              "backgroundColor": "gray",
              "marginRight": 4,
            }
          } />
         Add Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "red",
          "marginRight": 4,
        }
      } />
     Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "green",
          "marginRight": 4,
        }
      } />
     Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "blue",
          "marginRight": 4,
        }
      } />
     Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 09.no-selection-highlighting 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select Foo
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 10.array-options 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Select a number
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    1
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    2
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    3
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 11.stateless 1`] = `
<DropMenu
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={Object {}}
  focusedIndex={2}
  isDisabled={false}
  isExpanded={true}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={
    Array [
      1,
    ]
  }>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-highlighted lucid-SingleSelect-Control-is-selected lucid-SingleSelect-Control-is-expanded"
      tabIndex={0}>
      <span
        className="lucid-SingleSelect-Control-content">
        Green
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8" />
    </div>
  </DropMenu.Control>
  <DropMenu.NullOption>
    Select Color
  </DropMenu.NullOption>
  <DropMenu.OptionGroup
    isHidden={false}>
    Preferred
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Red
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Green
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={false}>
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={false}>
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={false}>
    Violet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={false}>
    Brown
  </DropMenu.Option>
</DropMenu>
`;
